--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -1,43 +1,7 @@
 @font-face {
   font-family: 'Inter';
-  src: url('/assets/fonts/Inter-ExtraBold.woff2') format('woff2'),
-      url('/assets/fonts/Inter-ExtraBold.woff') format('woff');
-  font-weight: bold;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Inter';
-  src: url('/assets/fonts/Inter-Light.woff2') format('woff2'),
-      url('/assets/fonts/Inter-Light.woff') format('woff');
-  font-weight: 300;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Inter';
-  src: url('/assets/fonts/Inter-ExtraLight.woff2') format('woff2'),
-      url('/assets/fonts/Inter-ExtraLight.woff') format('woff');
-  font-weight: 200;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Inter';
-  src: url('/assets/fonts/Inter-Medium.woff2') format('woff2'),
-      url('/assets/fonts/Inter-Medium.woff') format('woff');
-  font-weight: 500;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Inter';
-  src: url('/assets/fonts/Inter-Regular.woff2') format('woff2'),
-      url('/assets/fonts/Inter-Regular.woff') format('woff');
+  src: url('./fontsInter-Regular.woff2') format('woff2'),
+      url('./fontsInter-Regular.woff') format('woff');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -45,17 +9,26 @@
 
 @font-face {
   font-family: 'Inter';
-  src: url('/assets/fonts/Inter-SemiBold.woff2') format('woff2'),
-      url('/assets/fonts/Inter-SemiBold.woff') format('woff');
-  font-weight: 600;
+  src: url('./fontsInter-Medium.woff2') format('woff2'),
+      url('./fontsInter-Medium.woff') format('woff');
+  font-weight: 500;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
   font-family: 'Inter';
-  src: url('/assets/fonts/Inter-Thin.woff2') format('woff2'),
-      url('/assets/fonts/Inter-Thin.woff') format('woff');
+  src: url('./fontsInter-Light.woff2') format('woff2'),
+      url('./fontsInter-Light.woff') format('woff');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Inter';
+  src: url('./fontsInter-Thin.woff2') format('woff2'),
+      url('./fontsInter-Thin.woff') format('woff');
   font-weight: 100;
   font-style: normal;
   font-display: swap;
@@ -63,8 +36,17 @@
 
 @font-face {
   font-family: 'Inter';
-  src: url('/assets/fonts/Inter-Bold.woff2') format('woff2'),
-      url('/assets/fonts/Inter-Bold.woff') format('woff');
+  src: url('./fontsInter-Black.woff2') format('woff2'),
+      url('./fontsInter-Black.woff') format('woff');
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Inter';
+  src: url('./fontsInter-Bold.woff2') format('woff2'),
+      url('./fontsInter-Bold.woff') format('woff');
   font-weight: bold;
   font-style: normal;
   font-display: swap;
@@ -72,9 +54,27 @@
 
 @font-face {
   font-family: 'Inter';
-  src: url('/assets/fonts/Inter-Black.woff2') format('woff2'),
-      url('/assets/fonts/Inter-Black.woff') format('woff');
-  font-weight: 900;
+  src: url('./fontsInter-ExtraBold.woff2') format('woff2'),
+      url('./fontsInter-ExtraBold.woff') format('woff');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Inter';
+  src: url('./fontsInter-SemiBold.woff2') format('woff2'),
+      url('./fontsInter-SemiBold.woff') format('woff');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Inter';
+  src: url('./fontsInter-ExtraLight.woff2') format('woff2'),
+      url('./fontsInter-ExtraLight.woff') format('woff');
+  font-weight: 200;
   font-style: normal;
   font-display: swap;
 }
@@ -90,7 +90,7 @@ body {
   // font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue",
   //   Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji",
   //   "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
   font-size: 16px;
   font-weight: $font-regular;
   line-height: 1.3;
